# motus

./: .gitignore  .motus_python_path  LICENSE  README.md  cluster_gen.py  desmond-analysis.sh  desmond-md.sh  desmond-model-md.sh  desmond_plot.py  dist_gen.py  esp_gen.py  fix_pdb_for_schrodinger.py  install.sh  pdb_to_sdf.py  requirements.txt  setup.sh  water_res_gen.py
agent/: AGENT.md  motus_cli.py  pyproject.toml
agent/motus/: __init__.py  loop.py  registry.py  smiles_db.py
agent/motus/memory/: store.py
agent/motus/templates/: paper-template-desmond.tex
agent/motus/tools/: md_analyze.py  md_build.py  md_comprehensive.py  md_desmond.py  md_read.py  md_render.py  md_report.py  md_run.py  md_system.py
agent/motus/web/: app.py  tunnel.py
agent/scripts/: build_by_packmol.py  build_hydrate_system.py  fetch_molecule.py  tunnel.sh
converters/: cms2gmx.py  cms2lmp.py
desmond/: desmond-analysis.sh  desmond-analysis_large_system.sh  desmond-md.sh  desmond-metadynamics.sh  desmond-metamd_job-analysis.sh  desmond-publish.sh
desmond/functions/: density_gen.py  desmond_plot.py  dipole_gen.py  docx_generator.py  freevol_gen.py  meta_gen.py  paper-generator.py  rdf_gen.py  rg_gen.py  sima_gen.py  sima_plot.py  vmd_rdf.tcl  water_res_fast.py  water_shell_fast.py
gromacs/: gromacs-analysis.sh  gromacs-cluster.sh  gromacs-contacts.sh  gromacs-dihedral.sh  gromacs-md.sh  gromacs-metadynamics.sh  gromacs-pca.sh  gromacs-umbrella.sh  gromacs-wham.sh
gromacs/functions/: gromacs_comprehensive.py  gromacs_meta_gen.py  gromacs_plot.py
lammps/: lammps-analysis.sh  lammps-bond-react.sh  lammps-md.sh  lammps-metadynamics.sh  lammps-reaxff-analysis.sh  lammps-reaxff.sh
lammps/functions/: bond_react_gen.py  gen_urea_data.py  (+3 more)
(+18 files in other folders)
